--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 # Framework for running automated tests on OSB using Travis-CI, see https://github.com/OpenSourceBrain/osb-model-validation
-# Still in development, subject to change without notice!!
 
 language: python
 python: 2.7
@@ -9,10 +8,11 @@ env:
     - OMV_ENGINE=jNeuroML_validatev1
 
 install: 
-    - pip install git+https://github.com/OpenSourceBrain/osb-model-validation@test_new_backends
+    - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
 
 script:
-    - omv all
+    - pwd
+    - omv all -V
     
     
     
