will wrap the dashboard methods

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ neuroConstruct/generatedNeuroML2/html
 
 /NeuroML2/*-*
 /NeuroML2/*_*
+/NeuroML2/pythonScripts/*.json
 /NeuroML2/pythonScripts/*.mod
 /NeuroML2/pythonScripts/*.hoc
 /NeuroML2/pythonScripts/*.props
