wrapping up the methods and testing generation of dashboards

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ neuroConstruct/generatedNeuroML2/html
 
 /NeuroML2/*-*
 /NeuroML2/*_*
+
+/NeuroML2/pythonScripts/*
+
+/NeuroML2/pythonScripts
 /NeuroML2/pythonScripts/*.json
 /NeuroML2/pythonScripts/*.mod
 /NeuroML2/pythonScripts/*.hoc
@@ -48,8 +52,8 @@ neuroConstruct/generatedNeuroML2/html
 /NeuroML2/pythonScripts/netbuild/*
 !/NeuroML2/pythonScripts/netbuild/*.py
 /NeuroML2/pythonScripts/netbuild/*_nrn.py
-!/NeuroML2/pythonScripts/netbuild/*.net.nml
-!/NeuroML2/pythonScripts/netbuild/*.xml
+/NeuroML2/pythonScripts/netbuild/*.net.nml
+/NeuroML2/pythonScripts/netbuild/*.xml
 !/NeuroML2/pythonScripts/netbuild/netConnList
 
 
