--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python: 2.7
 env:
     - OMV_ENGINE=jNeuroML
     - OMV_ENGINE=jNeuroML_NEURON
+    - OMV_ENGINE=jNeuroML_NetPyNE
     - OMV_ENGINE=jNeuroML_validate
     - OMV_ENGINE=jNeuroML_validatev1
     - OMV_ENGINE=Py_neuroConstruct
