Retested and updated RunColumn

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,4 @@ neuroConstruct/generatedNeuroML2/html
 /NeuroML2/pythonScripts/netbuild/LEMS_TestSmall_netpyne.py
 /NeuroML2/test/LEMS_supbaskFigA2a_netpyne.py
 /NeuroML2/test/LEMS_supbaskFigA2a_netpyne.py_main.json
-
+/NeuroML2/pythonScripts/netbuild/LEMS_TestL23_netpyne.py
