--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
 # Framework for running automated tests on OSB using Travis-CI, see https://github.com/OpenSourceBrain/osb-model-validation
 
+dist: trusty
+sudo: false  
+
+addons:
+  apt:
+    packages:
+    - python-matplotlib 
+    - python-tk
+    - python-numpy 
+    - python-scipy 
+    - python-lxml
+    - libhdf5-7
+    - python-tables
+
 language: python
 python: 2.7
 
