--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ addons:
 language: python
 python: 2.7
 
+virtualenv:
+    system_site_packages: true
+
 env:
     - OMV_ENGINE=jNeuroML
     - OMV_ENGINE=jNeuroML_NEURON
