--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ simulations
 *.mod
 *.hoc
 *_nrn.py
+*.pov
+*.ini
 
 neuroConstruct/cellMechanisms/Syn_*
 neuroConstruct/savedNetworks
@@ -63,3 +65,6 @@ neuroConstruct/generatedNeuroML2/html
 /NeuroML2/test/LEMS_supbaskFigA2a_netpyne.py
 /NeuroML2/test/LEMS_supbaskFigA2a_netpyne.py_main.json
 /NeuroML2/pythonScripts/netbuild/LEMS_TestL23_netpyne.py
+/NeuroML2/pythonScripts/netbuild/*.py_main.json
+/NeuroML2/pythonScripts/netbuild/*.png
+/NeuroML2/pythonScripts/netbuild/LEMS_TestMedium_netpyne.py
