--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ env:
 
 install: 
     - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
+    - pip install scipy # Why is this needed? Doesn't seem to get installed correctly on trusty with addons above...
 
 script:
     - pwd
