--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ neuroConstruct/generatedNeuroML2/html
 /NeuroML2/pythonScripts/netbuild/Syn*.synapse.json
 /NeuroML2/pythonScripts/netbuild/jsbml.log
 /NeuroML2/pythonScripts/netbuild/libjhdf5.so
+/NeuroML2/pythonScripts/netbuild/*.gv
+/NeuroML2/pythonScripts/netbuild/*.gv.pdf
+/neuroConstruct/generatedNeuroML2/*.gv
+/neuroConstruct/generatedNeuroML2/*.gv.pdf
