--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -9,14 +9,13 @@ on:
 
 jobs:
   build:
-  
-    name: Check Py v${{ matrix.python-version }} on ${{ matrix.runs-on }} with ${{ matrix.engine }}
+
     runs-on: ${{ matrix.runs-on }}
     strategy:
       fail-fast: false
       matrix:
         python-version: [ 3.9 ]
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: [ ubuntu-latest, macos-latest ]
         engine: [ jNeuroML, jNeuroML_NEURON, jNeuroML_NetPyNE, jNeuroML_EDEN, jNeuroML_validate, jNeuroML_validatev1, Py_neuroConstruct ]
 
     steps:
