--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ 3.9 ]
-        runs-on: [ ubuntu-latest, macos-latest ]
+        runs-on: [ ubuntu-latest ]
         engine: [ jNeuroML, jNeuroML_NEURON, jNeuroML_NetPyNE, jNeuroML_validate, jNeuroML_validatev1, Py_neuroConstruct ]
 
     steps:
