--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -17,6 +17,9 @@ jobs:
         python-version: [ 3.9 ]
         runs-on: [ ubuntu-latest, macos-latest ]
         engine: [ jNeuroML, jNeuroML_NEURON, jNeuroML_NetPyNE, jNeuroML_EDEN, jNeuroML_validate, jNeuroML_validatev1, Py_neuroConstruct ]
+        exclude:
+          - runs-on: macos-latest
+            engine: "Py_neuroConstruct"
 
     steps:
     - uses: actions/checkout@v4
